2011-03-17  Iain Murray  <iain@iainmurray.net>

	* bootstrap.conf (gnulib_modules): Include nproc in the list.

2011-03-08  Rik  <octave@nomad.inbox5.com>

	* mk-opts.pl: Recode using more modern Perl syntax.
	Use my, not local, for lexically-scoped variables.
	Use ALL_CAPITALS for global variable names.
	Change code to remove any warnings from Perl lint (-w).
	Inline small subroutines for better readability.
	Use here documents and qq operator to avoid excessive backlashing of ".
	Add more informative usage() information.

2011-03-03  Rik  <octave@nomad.inbox5.com>

	* NEWS: Deprecate is_duplicate_entry.

2011-03-01  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Add Fink packages needed to support print output.

2011-02-28  Rik  <octave@nomad.inbox5.com>

	* NEWS: Mention new functions isrow, iscolumn.

2011-02-23  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* .hgignore: Cleanup and more files to be ignore that get added
	to the source during build time.

2011-02-22  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: New explicit 'make check' target.

2011-02-21  John W. Eaton  <jwe@octave.org>

	* NEWS: Note that PCRE is now required to build Octave.
	* configure.ac: Improve check for PCRE, which is now required.
	Don't check for -lregex.

2011-02-19  Rik  <octave@nomad.inbox5.com>

	* README.MacOS: Keep line length below 80, use 2 spaces to start
	sentences.

2011-02-16  Richard Campbell  <rlcamp.pdx@gmail.com>

	* README.MacOS: Updated Readme.MacOS section 2.2.1 with results of test
	compilation on vanilla machine.

2011-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* configure.ac: Use AC_COMPILE_IFELSE to check for OpenGL
	support in FLTK.

2011-02-09  John W. Eaton  <jwe@octave.org>

	* NEWS: Update.

2011-02-09  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Spelling corrections.

2011-02-08  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Fix FFTW CCFLAGS.

2011-02-08  Rik  <octave@nomad.inbox5.com>
